<resources>
    <string name="app_name">WaspDroid</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_default_url" translatable="false">sampang.internet-box.ch</string>
    <string name="pref_title_url">Server URL</string>
    <string name="pref_key_url" translatable="false">base_url</string>
    <string name="pref_summary_url">Set the server URL to use to get the run data</string>

    <string name="pref_default_port" translatable="false">8080</string>
    <string name="pref_title_port">Port number</string>
    <string name="pref_key_port" translatable="false">port_number</string>
    <string name="pref_summary_port">Set the server port to use to get the run data</string>

    <string name="sync_error_message">We couldn\'t sync the data with the server</string>
    <string name="title_activity_maps">Map</string>
    <string name="run_date_header">Date of run</string>
    <string name="run_time_header">Time of run</string>
    <string name="run_distance_header">Distance</string>
    <string name="run_avgSpeed_header">Average Speed</string>
    <string name="run_maxSpeed_header">Maximum Speed</string>
    <string name="show_on_maps">Show on full screen maps</string>


</resources>
