<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <fragment
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map_detail_view"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_rowWeight="0.5" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_row="33"
        android:layout_column="0"
        android:layout_rowWeight="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/run_date_header"
                    
                    android:layout_weight="@integer/header_stats_weight"
                    android:id="@+id/run_date_header" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/value_stats_weight"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="hello world"
                    android:id="@+id/run_date_value"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/run_time_header"
                    
                    android:layout_weight="@integer/header_stats_weight"
                    android:id="@+id/run_time_header" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/value_stats_weight"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="hello world"
                    android:id="@+id/run_time_value"/>


            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    
                    android:text="@string/run_distance_header"
                    android:layout_weight="@integer/header_stats_weight"
                    android:id="@+id/run_distance_header" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/value_stats_weight"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="hello world"
                    android:id="@+id/run_distance_value"/>


            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/run_avgSpeed_header"
                    
                    android:layout_weight="@integer/header_stats_weight"
                    android:id="@+id/run_avgSpeed_header" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/value_stats_weight"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="hello world"
                    android:id="@+id/run_avgSpeed_value"/>


            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/run_maxSpeed_header"
                    
                    android:layout_weight="@integer/header_stats_weight"
                    android:id="@+id/run_maxSpeed_header" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="@integer/value_stats_weight"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="hello world"
                    android:id="@+id/run_maxSpeed_value"/>


            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_on_maps"
                android:id="@+id/show_on_maps"/>

        </LinearLayout>

    </ScrollView>


</GridLayout>